After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 702423 - CellRendererPixbuf regression: Stock icons with rtl/ltr variants not displayed
CellRendererPixbuf regression: Stock icons with rtl/ltr variants not displayed
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkTreeView
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: gtktreeview-bugs
gtktreeview-bugs
: 703371 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-06-17 07:00 UTC by Christoph Reiter (lazka)
Modified: 2013-09-05 16:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
cellrenderer test case (911 bytes, text/plain)
2013-06-17 11:36 UTC, Christoph Reiter (lazka)
Details
rtl GtkImage test case (507 bytes, text/plain)
2013-06-17 11:36 UTC, Christoph Reiter (lazka)
Details
C test for GtkCellRendererPixbuf (2.04 KB, text/plain)
2013-07-01 08:52 UTC, Domenico Ferrari
Details

Description Christoph Reiter (lazka) 2013-06-17 07:00:05 UTC
Icons like Gtk.STOCK_JUMP_TO or Gtk.STOCK_MEDIA_PLAY just show the missing icon image instead of the right stock icon.

bisected:

a73cc55e022c69fb2c7f6b059b0a9c12c3f057e1 is the first bad commit
commit a73cc55e022c69fb2c7f6b059b0a9c12c3f057e1
Author: Benjamin Otte <otte@redhat.com>
Date:   Tue Dec 18 17:47:06 2012 +0100

    stylecontext: Use state flags for direction
    
    ... instead of using a custom direction member.
    
    And with that, GtkWidget doesn't need to call
    gtk_style_context_set_direction() anymore.
Comment 1 Christoph Reiter (lazka) 2013-06-17 09:31:10 UTC
The same problem occurs with gtk_image_new_from_stock after calling

gtk_widget_set_default_direction(GTK_TEXT_DIR_RTL)

I haven't checked if the commit above is also responsible for this.
Comment 2 Christoph Reiter (lazka) 2013-06-17 11:36:05 UTC
Created attachment 247013 [details]
cellrenderer test case
Comment 3 Christoph Reiter (lazka) 2013-06-17 11:36:23 UTC
Created attachment 247014 [details]
rtl GtkImage test case
Comment 4 Domenico Ferrari 2013-07-01 08:52:06 UTC
Created attachment 248120 [details]
C test for GtkCellRendererPixbuf

Gtk 3.6.1 -> icons ok
Gtk 3.8.1 -> ltr icons missing
Comment 5 Matthias Clasen 2013-07-01 11:20:22 UTC
*** Bug 703371 has been marked as a duplicate of this bug. ***
Comment 6 Domenico Ferrari 2013-09-05 06:46:54 UTC
Bug affects 3.9.8 also
Comment 7 Benjamin Otte (Company) 2013-09-05 16:49:20 UTC
Committed a fix and a testcase.
Comment 8 Christoph Reiter (lazka) 2013-09-05 16:55:32 UTC
Thanks!